xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__let_expr.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"let $x := 1 return 2\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v1",
                ),
                var_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                Integer(
                                    1,
                                ),
                            ),
                            span: 10..11,
                        },
                    ),
                    span: 10..11,
                },
                return_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                Integer(
                                    2,
                                ),
                            ),
                            span: 19..20,
                        },
                    ),
                    span: 19..20,
                },
            },
        ),
        span: 0..20,
    },
)
