xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__ncname_key_specifier.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_xpath(\"? foo\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Lookup(
                        Lookup {
                            atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v0",
                                    ),
                                ),
                                span: 0..0,
                            },
                            arg_atom: Spanned {
                                value: Const(
                                    String(
                                        "foo",
                                    ),
                                ),
                                span: 0..5,
                            },
                        },
                    ),
                    span: 0..5,
                },
            },
        ),
        span: 0..5,
    },
)
