xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__postfix_lookup.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_xpath(\"1 ? foo\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Map(
                        Map {
                            context_names: ContextNames {
                                item: Name(
                                    "v4",
                                ),
                                position: Name(
                                    "v7",
                                ),
                                last: Name(
                                    "v8",
                                ),
                            },
                            var_atom: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 0..1,
                            },
                            return_expr: Spanned {
                                value: Lookup(
                                    Lookup {
                                        atom: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v4",
                                                ),
                                            ),
                                            span: 0..0,
                                        },
                                        arg_atom: Spanned {
                                            value: Const(
                                                String(
                                                    "foo",
                                                ),
                                            ),
                                            span: 0..0,
                                        },
                                    },
                                ),
                                span: 0..0,
                            },
                        },
                    ),
                    span: 0..0,
                },
            },
        ),
        span: 0..7,
    },
)
