xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__quantified.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"some $x in (1, 2) satisfies $x gt 1\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 12..13,
                            },
                            op: Comma,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: 15..16,
                            },
                        },
                    ),
                    span: 11..16,
                },
                return_expr: Spanned {
                    value: Quantified(
                        Quantified {
                            quantifier: Some,
                            context_names: ContextNames {
                                item: Name(
                                    "v3",
                                ),
                                position: Name(
                                    "v4",
                                ),
                                last: Name(
                                    "v5",
                                ),
                            },
                            var_atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v2",
                                    ),
                                ),
                                span: 11..16,
                            },
                            satisifies_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v3",
                                                ),
                                            ),
                                            span: 28..30,
                                        },
                                        op: ValueGt,
                                        right: Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: 34..35,
                                        },
                                    },
                                ),
                                span: 28..35,
                            },
                        },
                    ),
                    span: 0..35,
                },
            },
        ),
        span: 0..35,
    },
)
